# voicevox-core-scripts

src/til-20230407/: pyproject.toml
src/til-20230407/src/: text-to-speech.py
