[project]
authors = [{name = "iimuz", email = "iz.primary.story+github@gmail.com"}]
description = "epubからtextを抽出するスクリプト"
license = {file = "LICENSE"}
name = "epub-to-text"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://github.com/iimuz/til/til-20230409"}
version = "1.0.0"

dependencies = [
  "pydantic",
  "voicevox_core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.14.3/voicevox_core-0.14.3+cpu-cp38-abi3-win_amd64.whl",
]

[tools.setuptools.package-dir]
pdf_to_text = "src"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "isort",
  "mypy",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=63", "wheel"]

[tool.isort]
profile = "black"
